<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="header_text">Weight of the package</string>
    <string name="edit_text" translatable="false">0</string>
    <string name="base_cost">Base Cost:</string>
    <string name="added_cost">Added Cost:</string>
    <string name="total_cost">Total Shipping Cost:</string>
    <string name="ounces_label">(in ounces)</string>
    <string name="base_cost_value" translatable="false">$3.00</string>
    <string name="default_cost_value" translatable="false">$0.00</string>

    <string name="number_one" translatable="false">1</string>
    <string name="number_two" translatable="false">2</string>
    <string name="number_three" translatable="false">3</string>
    <string name="number_four" translatable="false">4</string>
    <string name="number_five" translatable="false">5</string>
    <string name="number_six" translatable="false">6</string>
    <string name="number_seven" translatable="false">7</string>
    <string name="number_eight" translatable="false">8</string>
    <string name="number_nine" translatable="false">9</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="number_decimal" translatable="false">.</string>

</resources>
